--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "@capacitor-community/barcode-scanner": "^4.0.1",
-    "@capacitor/android": "5.2.2",
+    "@capacitor-mlkit/barcode-scanning": "^5.3.0",
+    "@capacitor/android": "^5.2.2",
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "5.3.0",
@@ -36,6 +36,7 @@
     "angularx-qrcode": "^16.0.2",
     "firebase": "^9.23.0",
     "ionicons": "^7.0.0",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
